# aoc

./: .gitignore  aoc.py  pyproject.toml
01/: day01.py
02/: day02.py
03/: day03.py
04/: day04.py
05/: day05.py
06/: day06.py
07/: day07.py
08/: day08.py
09/: day09.py  test.py
10/: day10.py
11/: day11.py
12/: day12.py
13/: day13.py
14/: day14.py
15/: day15.py
16/: day16.py
17/: day17.py
18/: day18.py
19/: day19.py
20/: day20.py
21/: day21.py
22/: day22.py
23/: day23.py
24/: day24.py
25/: day25.py
